docs: fix wrapping of theme/scale switchers

--- a/components/site/index.css
+++ b/components/site/index.css
@@ -370,6 +370,9 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-CSSComponent-switcher {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .spectrum-CSS-switcherContainer {
